// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 값이 전부 빈 문자열 — 경고 없음 [BR-35] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 난이도 0 [BR-11] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "난이도는 1~5 사이여야 합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 난이도 5abc [BR-11] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "난이도는 1~5 사이여야 합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 단원 abc — 형식 · 소문자 · 미등록 세 경고의 순서 [BR-08] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "단원 코드 형식이 올바르지 않습니다. (예: M5-1)",
    "단원 코드는 대문자로 입력하세요. (입력값 그대로 조회합니다)",
    "등록되지 않은 단원 코드입니다: abc",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 단원 소문자 m5-1 — 대문자 경고만, 등록된 코드로 친다 [BR-08] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "단원 코드는 대문자로 입력하세요. (입력값 그대로 조회합니다)",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 등록된 태그 계산 — 경고 없음 [BR-12] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 모든 파라미터가 틀림 — 경고 순서 키워드 → 단원 → 난이도 → 태그 → 정렬 → 페이지 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "키워드가 한 글자라 결과가 많을 수 있습니다.",
    "단원 코드 형식이 올바르지 않습니다. (예: M5-1)",
    "단원 코드는 대문자로 입력하세요. (입력값 그대로 조회합니다)",
    "등록되지 않은 단원 코드입니다: abc",
    "난이도는 1~5 사이여야 합니다.",
    "태그는 부분 일치를 지원하지 않습니다.",
    "등록되지 않은 태그입니다: %",
    "정렬 방향은 asc 또는 desc 만 가능합니다.",
    "알 수 없는 정렬 기준입니다. 기본 정렬을 사용합니다.",
    "페이지 번호가 올바르지 않아 1페이지를 표시합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 알 수 없는 정렬 기준 — 경고, 정렬 표시 없음 [BR-30] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "알 수 없는 정렬 기준입니다. 기본 정렬을 사용합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 정렬 LEVEL, 방향 없음 — level desc 로 표시 [BR-31 BR-32] 1`] = `
{
  "dir": "desc",
  "pager": null,
  "sort": "level",
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 정렬 title, 방향 DESC [BR-31 BR-32] 1`] = `
{
  "dir": "desc",
  "pager": null,
  "sort": "title",
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 정렬 unit, 잘못된 방향 up — 방향 경고, unit asc 로 표시 [BR-32] 1`] = `
{
  "dir": "asc",
  "pager": null,
  "sort": "unit",
  "status": 200,
  "warnings": [
    "정렬 방향은 asc 또는 desc 만 가능합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 정렬 기준 없이 방향 asc 만 [BR-32] 1`] = `
{
  "dir": "asc",
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 조건 없음 — 경고 없음, 정렬 표시 없음, 20건이라 페이저 없음 [BR-28 BR-34] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 키워드 % 한 글자 — 한 글자 경고 다음 와일드카드 경고 [BR-05 BR-06] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "키워드가 한 글자라 결과가 많을 수 있습니다.",
    "키워드의 % 와 _ 는 와일드카드로 처리됩니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 키워드 101자 — 100자로 자른다는 경고 [BR-04] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "키워드가 너무 길어 100자까지만 사용했습니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 키워드 한 글자 [BR-05] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "키워드가 한 글자라 결과가 많을 수 있습니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 키워드가 공백뿐 — 경고 없음 [BR-40] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 키워드에 _ [BR-06] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "키워드의 % 와 _ 는 와일드카드로 처리됩니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 태그 51자 — 자른 뒤의 이름으로 미등록 경고 [BR-13 BR-14] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "태그 이름이 너무 길어 50자까지만 사용했습니다.",
    "등록되지 않은 태그입니다: 가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가가",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 태그 계% — 부분 일치 경고 다음 미등록 경고 [BR-14] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "태그는 부분 일치를 지원하지 않습니다.",
    "등록되지 않은 태그입니다: 계%",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 페이지 0 — 경고 없이 1페이지 [BR-35] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 페이지 1000 — 999 경고 [BR-35] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "페이지 번호는 999 를 넘을 수 없습니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 페이지 abc — 1페이지 경고 [BR-35] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "페이지 번호가 올바르지 않아 1페이지를 표시합니다.",
  ],
}
`;

exports[`item-bank · 문항 검색(search.php) 경고 · 정렬 표시 · 페이저 > 형식은 맞지만 없는 단원 X9-9 [BR-08] 1`] = `
{
  "dir": null,
  "pager": null,
  "sort": null,
  "status": 200,
  "warnings": [
    "등록되지 않은 단원 코드입니다: X9-9",
  ],
}
`;
